--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@handlebars/allow-prototype-access": "^1.0.5",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "method-override": "^3.0.0",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
