--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+},
+
   "name": "make-parties",
   "version": "1.0.0",
   "description": "",
@@ -21,4 +26,5 @@
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
   }
+  
 }
