--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
   "scripts": {
-    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-},
-
+  },
   "name": "make-parties",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -18,6 +13,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "method-override": "^3.0.0",
+    "moment": "^2.29.3",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
@@ -26,5 +22,4 @@
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
   }
-  
 }
