--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.20.1"
+    "sequelize": "^6.20.1",
+    "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.4.1"
+    
   }
 }
