--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "method-override": "^3.0.0",
@@ -20,7 +21,5 @@
     "sequelize": "^6.20.1",
     "sequelize-cli": "^6.4.1"
   },
-  "devDependencies": {
-    
-  }
+  "devDependencies": {}
 }
